--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "devtools-timeline-model-browser": "^1.0.2",
     "sw-precache": "^4.3.0",
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vue-lodash": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -44,6 +45,7 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "semver": "^5.3.0",
