Experiment with a second bundlesize entry for app

--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
     {
       "path": "./dist/static/js/vendor.*.js",
       "maxSize": "35 Kb"
+    },
+    {
+      "path": "./dist/static/js/app.*.js",
+      "maxSize": "25 Kb"
     }
   ]
 }
